--- a/package.json
+++ b/package.json
@@ -104,6 +104,26 @@
                 "aws.s3.defaultRegion": {
                     "type": "string",
                     "default": "us-east-1",
+                    "enum": [
+                        "ap-east-1",
+                        "ap-northeast-1" ,
+                        "ap-northeast-2",
+                        "ap-south-1",
+                        "ap-southeast-1",
+                        "ap-southeast-2",
+                        "ca-central-1",
+                        "eu-central-1",
+                        "eu-north-1",
+                        "eu-west-1",
+                        "eu-west-2",
+                        "eu-west-3",
+                        "me-south-1",
+                        "sa-east-1",
+                        "us-east-1",
+                        "us-east-2",
+                        "us-west-1",
+                        "us-west-2"
+                    ],
                     "markdownDescription": "%AWS.configuration.description.s3.defaultRegion%"
                 },
                 "aws.samcli.location": {
