--- a/package.json
+++ b/package.json
@@ -101,31 +101,6 @@
                     "maximum": 1000,
                     "markdownDescription": "%AWS.configuration.description.s3.maxItemsPerPage%"
                 },
-                "aws.s3.defaultRegion": {
-                    "type": "string",
-                    "default": "us-east-1",
-                    "enum": [
-                        "ap-east-1",
-                        "ap-northeast-1" ,
-                        "ap-northeast-2",
-                        "ap-south-1",
-                        "ap-southeast-1",
-                        "ap-southeast-2",
-                        "ca-central-1",
-                        "eu-central-1",
-                        "eu-north-1",
-                        "eu-west-1",
-                        "eu-west-2",
-                        "eu-west-3",
-                        "me-south-1",
-                        "sa-east-1",
-                        "us-east-1",
-                        "us-east-2",
-                        "us-west-1",
-                        "us-west-2"
-                    ],
-                    "markdownDescription": "%AWS.configuration.description.s3.defaultRegion%"
-                },
                 "aws.samcli.location": {
                     "type": "string",
                     "scope": "machine",
@@ -1584,15 +1559,16 @@
         "@types/uuid": "^8.3.0",
         "@types/vscode": "1.42.0",
         "@types/xml2js": "^0.4.8",
-        "@typescript-eslint/eslint-plugin": "^4.24.0",
-        "@typescript-eslint/parser": "^4.24.0",
+        "@typescript-eslint/eslint-plugin": "^4.27.0",
+        "@typescript-eslint/parser": "^4.27.0",
         "circular-dependency-plugin": "^5.2.0",
         "decache": "^4.4.0",
         "esbuild-loader": "2.10.0",
-        "eslint": "^7.26.0",
+        "eslint": "^7.28.0",
         "eslint-config-prettier": "8.3",
         "eslint-plugin-header": "^3.1.1",
         "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-prettier": "^3.4.0",
         "glob": "^7.1.4",
         "husky": "^6.0.0",
         "istanbul": "^0.4.5",
@@ -1601,7 +1577,7 @@
         "mocha": "^7.1.1",
         "mocha-junit-reporter": "^2.0.0",
         "mocha-multi-reporters": "^1.1.7",
-        "prettier": "^2.2.1",
+        "prettier": "^2.3.1",
         "prettier-plugin-sh": "^0.6.1",
         "pretty-quick": "^3.1.0",
         "readline-sync": "^1.4.9",
