--- a/package.json
+++ b/package.json
@@ -1893,6 +1893,7 @@
         "esbuild-loader": "2.10.0",
         "eslint": "^7.28.0",
         "eslint-config-prettier": "8.3",
+        "eslint-plugin-aws": "file:plugins/eslint-aws",
         "eslint-plugin-header": "^3.1.1",
         "eslint-plugin-no-null": "^1.0.2",
         "glob": "^7.1.4",
