--- a/package.json
+++ b/package.json
@@ -1852,7 +1852,7 @@
         "integrationTest": "npm run testCompile && ts-node ./test-scripts/integrationTest.ts",
         "lint": "eslint -c .eslintrc.js --ext .ts .",
         "lintfix": "eslint -c .eslintrc.js --fix --ext .ts .",
-        "buildLinterPlugin": "cd ./plugins/eslint-aws && npm run build",
+        "buildLinterPlugin": "cd ./plugins/eslint-aws && npm i && npm run build",
         "package": "ts-node ./build-scripts/package.ts",
         "install-plugin": "vsce package -o aws-toolkit-vscode-test.vsix && code --install-extension aws-toolkit-vscode-test.vsix",
         "generateTelemetry": "node node_modules/@aws-toolkits/telemetry/lib/generateTelemetry.js --extraInput=src/shared/telemetry/vscodeTelemetry.json --output=src/shared/telemetry/telemetry.gen.ts",
