--- a/plugins/eslint-aws/package.json
+++ b/plugins/eslint-aws/package.json
@@ -15,7 +15,8 @@
     },
     "devDependencies": {
         "eslint": "^7.29.0",
-        "mocha": "^9.0.1"
+        "mocha": "^9.0.1",
+        "typescript": "^4.3.4"
     },
     "engines": {
         "node": ">=0.10.0"
