--- a/package.json
+++ b/package.json
@@ -748,6 +748,10 @@
                     "when": "false"
                 },
                 {
+                    "command": "aws.s3.openFile",
+                    "when": "false"
+                },
+                {
                     "command": "aws.s3.uploadFileToParent",
                     "when": "false"
                 },
@@ -896,9 +900,14 @@
                     "group": "inline@1"
                 },
                 {
-                    "command": "aws.s3.downloadFileAs",
+                    "command": "aws.s3.openFile",
                     "when": "view == aws.explorer && viewItem == awsS3FileNode",
                     "group": "inline@1"
+                },
+                {
+                    "command": "aws.s3.downloadFileAs",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "group": "inline@2"
                 },
                 {
                     "command": "aws.s3.createBucket",
@@ -1014,6 +1023,11 @@
                     "command": "aws.s3.downloadFileAs",
                     "when": "view == aws.explorer && viewItem == awsS3FileNode",
                     "group": "0@1"
+                },
+                {
+                    "command": "aws.s3.openFile",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "group": "0@2"
                 },
                 {
                     "command": "aws.s3.uploadFile",
@@ -1279,6 +1293,17 @@
                 "title": "%AWS.command.s3.downloadFileAs%",
                 "category": "%AWS.title%",
                 "icon": "$(cloud-download)",
+                "cloud9": {
+                    "cn": {
+                        "category": "%AWS.title.cn%"
+                    }
+                }
+            },
+            {
+                "command": "aws.s3.openFile",
+                "title": "%AWS.command.s3.openFile%",
+                "category": "%AWS.title%",
+                "icon": "$(open-preview)",
                 "cloud9": {
                     "cn": {
                         "category": "%AWS.title.cn%"
